--- a/Application.RFPUI/ClientApp/src/app/proposals/planner-name/planner-name.component.html
+++ b/Application.RFPUI/ClientApp/src/app/proposals/planner-name/planner-name.component.html
@@ -1,13 +1,48 @@
 <div class="multiColorLine"></div>
-
-<div class="planName">
-  <div class="card">
-    <label> New Proposal </label>
-    <br />
-    <div class="input-container">
-      <input required type="text" id="proposalName" class="input-field" placeholder="Proposal Name">
+<div class="page">
+  <div class="planName">
+    <h2>Select EDGE Type</h2>
+    <div class="card row">
+      <div class="col-lg-6 col-md-6 col-sm-6 col-12">
+        <mat-card class="engineering" (click)="createNew(1)">
+          <div>
+            <span class="glyphicon glyphicon-cog"></span>
+          </div>
+          <div>
+            <h4>Engineering</h4>
+          </div>
+        </mat-card>
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-6 col-12">
+        <mat-card class="digitalization" (click)="createNew(2)">
+          <div>
+            <span class="glyphicon glyphicon-equalizer"></span>
+          </div>
+          <div>
+            <h4>Digitalization</h4>
+          </div>
+        </mat-card>
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-6 col-12">
+        <mat-card class="globalization" (click)="createNew(3)">
+          <div>
+            <span class="glyphicon glyphicon-globe"></span>
+          </div>
+          <div>
+            <h4>Globalization</h4>
+          </div>
+        </mat-card>
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-6 col-12">
+        <mat-card class="emergingTech" (click)="createNew(4)">
+          <div>
+            <span class="glyphicon glyphicon-road"></span>
+          </div>
+          <div>
+            <h4>EmergingTech</h4>
+          </div>
+        </mat-card>
+      </div>
     </div>
-    <br />
-    <button class="btn" (click)="createProposal()"> Create Proposal </button>
   </div>
 </div>
