--- a/Application.RFPUI/ClientApp/src/styles.css
+++ b/Application.RFPUI/ClientApp/src/styles.css
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
+body {
+  font-size: 12px !important;
+}
+
+
 .pageTitle {
   text-align: center;
   height: 30px;
@@ -44,6 +49,7 @@
   overflow-x: hidden;
   overflow-y: auto;
   padding-left: 5px;
+  padding-right: 5px;
 }
 
 .multiColorLine {
@@ -119,4 +125,11 @@ mat-label label {
 .imgloader {
   width: 100px;
   height: 100px;
+}
+
+
+/*Basic CSS*/
+
+.margin15 {
+  margin: 15px;
 }
