--- a/Application.RFPUI/ClientApp/src/app/proposals/planner-proposal/planner-proposal.component.css
+++ b/Application.RFPUI/ClientApp/src/app/proposals/planner-proposal/planner-proposal.component.css
@@ -1,7 +1,5 @@
 .newProposal {
   margin: 15px;
   padding: 15px;
-  border: 1px solid lightgrey;
-  border-radius: 10px;
-  background-color:#e1f3f2;
+  background-color:#e4f8ff;
 }
