--- a/Application.RFPUI/ClientApp/src/app/proposals/view-proposal/view-proposal.component.html
+++ b/Application.RFPUI/ClientApp/src/app/proposals/view-proposal/view-proposal.component.html
@@ -2,7 +2,7 @@
 <div class="page">
   <!--<div class="pageTitle"><span><b>Porposal: </b>  IKEA </span></div>-->
   
-  <div class="container-fluid">
+  <div class="container-fluid" id="proposalPage">
     <div class="banner">
       <div class="bannerTitle1">
         <b>Proposal Name : </b>
@@ -533,4 +533,5 @@
       </form>
     </div>
   </div>
+  <button (click)="top()">Top</button>
 </div>
