--- a/Application.RFPUI/ClientApp/src/app/proposals/planner-name/planner-name.component.html
+++ b/Application.RFPUI/ClientApp/src/app/proposals/planner-name/planner-name.component.html
@@ -1,7 +1,7 @@
 <div class="multiColorLine"></div>
 <div class="page">
   <div class="planName">
-    <h2>Select EDGE Type</h2>
+    <h2>Select EDGE</h2>
     <div class="card row">
       <div class="col-lg-6 col-md-6 col-sm-6 col-12">
         <mat-card class="engineering" (click)="createNew(1)">
