--- a/Application.RFPUI/ClientApp/src/app/proposals/planner-proposal/planner-proposal.component.css
+++ b/Application.RFPUI/ClientApp/src/app/proposals/planner-proposal/planner-proposal.component.css
@@ -1,5 +1,18 @@
 .newProposal {
   margin: 15px;
   padding: 15px;
-  background-color:#e4f8ff;
+  /*background-color: lightyellow;*/
+}
+
+.alert {
+  margin: 0px 25px 0px 25px;
+  font-size: 15px;
+}
+
+.header {
+  font-style: italic;
+  font-weight: 500;
+  color: gray;
+  text-align: center;
+  margin: 20px;
 }
