--- a/Application.RFPUI/ClientApp/src/app/administration/administration.component.html
+++ b/Application.RFPUI/ClientApp/src/app/administration/administration.component.html
@@ -2,24 +2,17 @@
 <div class="multiColorLine"></div>
 <div class="page">
   <div class="col-sm-12 col-md-2 col-lg-2 col-xs-12 padding-horizontal-0">
-  <ul class="nav nav-tabs tabs-left" style="height:800px;background-color:#ffffff;font-size:16px;">
-    <!--<li *ngFor="let routes of setupRoutes" routerLinkActive="active" [routerLink]="routes.path">
-      <a>
-        <span>{{routes.data?.title}}</span>
-      </a>
-    </li>-->
-    <li routerLinkActive="active">
-      <a>
-        <span>Locations</span>
-      </a>
-    </li>
-    <li>
-      <a>
-        <span>Milestones</span>
-      </a>
-    </li>
-  </ul>
+    <ul class="nav nav-tabs tabs-left" style="background-color:#ffffff;font-size:16px;">
+      <li *ngFor="let route of routes" routerLinkActive="active" [routerLink]="route.path">
+        <a>
+          <span>{{route.data?.title}}</span>
+        </a>
+      </li>
+    </ul>
   </div>
-  <router-outlet></router-outlet>
+  <div>
+    <router-outlet></router-outlet>
+  </div>
 </div>
+
 
