--- a/Application.RFPUI/ClientApp/src/app/master/master.component.html
+++ b/Application.RFPUI/ClientApp/src/app/master/master.component.html
@@ -6,7 +6,7 @@
       </a>
       <label class="devider"> | </label>
       <!--<label class="RFP"> RFP </label>-->
-      <label class="proposalSystem"> Proposal System </label>
+      <label class="proposalSystem"> Proposal Tracking System </label>
     </div>
 
     <div class="col-md-6">
