--- a/Application.RFPUI/ClientApp/src/app/proposals/planner-proposal/planner-proposal.component.html
+++ b/Application.RFPUI/ClientApp/src/app/proposals/planner-proposal/planner-proposal.component.html
@@ -38,16 +38,10 @@
             </mat-select>
           </mat-form-field>
         </div>
-        <!--<div class="col-lg-3">
+        <div class="col-lg-3">
           <mat-label>RFP Code</mat-label>
           <mat-form-field appearance="outline" disabled>
-            <input matInput formControlName="rfpCode" readonly maxlength="50">
-          </mat-form-field>
-        </div>-->
-        <div class="col-lg-3">
-          <mat-label>Scope</mat-label>
-          <mat-form-field appearance="outline">
-            <input matInput formControlName="scope" maxlength="250">
+            <input matInput placeholder="RFP Code" formControlName="rfpCode" readonly maxlength="50">
           </mat-form-field>
         </div>
       </div>
@@ -101,6 +95,14 @@
           </mat-form-field>
         </div>
         <div class="col-lg-6">
+          <mat-label>Scope</mat-label>
+          <mat-form-field appearance="outline">
+            <textarea rows="1" matInput multiline formControlName="scope" maxlength="250"></textarea>
+          </mat-form-field>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
           <mat-label>Description</mat-label>
           <mat-form-field appearance="outline">
             <textarea rows="1" matInput multiline formControlName="description" maxlength="250"></textarea>
